--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,35 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
-    android:layout_width="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
-
-
-    <EditText
-        android:id="@+id/editText"
+    android:orientation="vertical">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:background="#ffffff"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/text_appName"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="7"
+            android:background="@color/darcGray"
+            android:text="@string/app_name"
+            android:textColor="#ff9600"
+            android:textSize="25sp"/>
+        <Button
+            android:id="@+id/contactButton"
+            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:background="@color/darcGray"
+            android:textColor="@color/orange"
+            android:text="contacts"
 
-        android:hint="Enter message"
-        android:inputType="text"
-        android:textSize="20sp" />
-    <Button
-        android:id="@+id/button"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_centerHorizontal="true"
-        android:text="SEND"/>
-    <TextView
-        android:id="@+id/textV"
-        android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:layout_alignParentTop="true"
-        />
-</RelativeLayout>
+            />
+    </LinearLayout>
+       <ListView
+           android:id="@+id/chatList"
+           android:layout_width="match_parent"
+           android:layout_height="0dp"
+           android:layout_weight="12"
+           android:divider="@color/orange"
+           android:dividerHeight="2dp">
+
+       </ListView>
+
+
+</LinearLayout>
