--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    
+    <color name="darcGray">#252525</color>
+    <color name="orange">#ff9600</color>
+    <color name="white">#ffffff</color>
+    <color name="gray">#404040</color>
 </resources>
