--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -36,6 +36,7 @@
         android:layout_height="0dp"
         android:layout_weight="12"
         android:dividerHeight="0dp"
+        android:background="@color/gray"
         />
     <LinearLayout
         android:layout_width="match_parent"
@@ -49,12 +50,16 @@
             android:hint="Enter message"
             android:layout_weight="8"
             android:inputType="text"
-            android:textSize="15dp" />
+            android:textSize="15dp"
+            android:background="@color/darcGray"
+            android:textColor="@color/white"/>
         <Button
             android:id="@+id/sendButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
+            android:background="@color/darcGray"
+            android:textColor="@color/orange"
             android:text="SEND"/>
     </LinearLayout>
 
