--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -41,6 +41,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="9"
+        android:background="@color/darcGray"
+        android:dividerHeight="1.5dp"
+        android:divider="@color/orange"
         >
     </ListView>
 
