--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
             android:background="@color/darcGray"
             android:text="@string/app_name"
             android:textColor="#ff9600"
-            android:textSize="25sp"/>
+            android:textSize="30sp"/>
         <Button
             android:id="@+id/contactButton"
             android:layout_height="match_parent"
@@ -25,16 +25,17 @@
             android:background="@color/darcGray"
             android:textColor="@color/orange"
             android:text="contacts"
-
+            android:textSize="15sp"
             />
     </LinearLayout>
        <ListView
            android:id="@+id/chatList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
-           android:layout_weight="12"
+           android:layout_weight="9"
            android:divider="@color/orange"
-           android:dividerHeight="1.5dp">
+           android:dividerHeight="1.5dp"
+           android:background="@color/darcGray">
 
        </ListView>
 
