--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -5,31 +5,28 @@
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="5"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
             android:orientation="vertical">
             <TextView
                 android:id="@+id/adrName"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="2"
+                android:layout_height="wrap_content"
                 android:background="@color/gray"
                 android:textColor="@color/orange"
-                android:textSize="20dp"
+                android:textSize="25sp"
                 />
             <TextView
                 android:id="@+id/adrId"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:background="@color/gray"
                 android:textColor="@color/white"
-                android:textSize="10dp"
+                android:textSize="12sp"
                 android:gravity="top"/>
         </LinearLayout>
         <TextView
@@ -39,16 +36,16 @@
             android:layout_weight="1"
             android:background="@color/gray"
             android:textColor="@color/orange"
-            android:gravity="center_horizontal|bottom"/>
+            android:gravity="right|bottom"
+            android:textSize="20sp"/>
     </LinearLayout>
     <TextView
         android:id="@+id/lastMessage"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_height="wrap_content"
         android:background="@color/gray"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:gravity="left"/>
 
 </LinearLayout>
