--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -4,6 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
+    android:background="@color/darcGray"
     >
 
 
@@ -13,7 +14,8 @@
         android:layout_height="0dp"
         android:layout_weight="1"
 
-
+        android:textColor="@color/orange"
+        android:background="@color/gray"
         android:hint="Enter name"
         android:inputType="text"
         android:textSize="20sp" >
@@ -25,7 +27,9 @@
         android:layout_weight="1"
         android:ems="10"
         android:inputType="number"
-        android:hint="Enter ID" />
+        android:hint="Enter ID"
+        android:textColor="@color/orange"
+        android:background="@color/gray"/>
 
 
 
