--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -3,8 +3,8 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -35,6 +35,8 @@
         android:layout_weight="9"
         android:dividerHeight="0dp"
         android:background="@color/gray"
+        android:stackFromBottom="true"
+        tools:ignore="NestedScrolling"
         />
     <LinearLayout
         android:layout_width="match_parent"
