--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -11,6 +11,7 @@
         android:layout_weight="1"
         android:orientation="horizontal">
         <Button
+            android:id="@+id/backButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
