--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,17 +6,30 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="1.5"
         android:orientation="horizontal">
-        <TextView
-            android:id="@+id/text_appName"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="7"
-            android:background="@color/darcGray"
-            android:text="@string/app_name"
-            android:textColor="#ff9600"
-            android:textSize="30sp"/>
+            android:orientation="vertical"
+            android:background="@color/darcGray">
+            <TextView
+                android:id="@+id/text_userName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/darcGray"
+                android:textColor="@color/orange"
+                android:textSize="25sp"/>
+            <TextView
+                android:id="@+id/text_userId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/darcGray"
+                android:textColor="@color/white"
+                android:textSize="15sp"/>
+        </LinearLayout>
+
         <Button
             android:id="@+id/contactButton"
             android:layout_height="match_parent"
