--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -47,10 +47,10 @@
             android:id="@+id/sendText"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:hint="Enter message"
+            android:hint="@string/enter_message"
             android:layout_weight="8"
             android:inputType="text"
-            android:textSize="15dp"
+            android:textSize="15sp"
             android:background="@color/darcGray"
             android:textColor="@color/white"/>
         <Button
@@ -60,7 +60,7 @@
             android:layout_weight="2"
             android:background="@color/darcGray"
             android:textColor="@color/orange"
-            android:text="SEND"/>
+            android:text="@string/send"/>
     </LinearLayout>
 
 
