--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -15,7 +15,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="back"
+            android:text="@string/back"
             android:textColor="@color/orange"
             android:drawableLeft="@color/orange"
             android:background="@color/darcGray"/>
@@ -24,7 +24,7 @@
             android:layout_height="match_parent"
             android:layout_weight="4"
             android:background="@color/darcGray"
-            android:text="Contacts"
+            android:text="@string/contacts"
             android:gravity="center_vertical"
             android:textSize="25sp"
             android:textColor="@color/orange"/>
@@ -33,7 +33,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="add"
+            android:text="@string/add"
             android:textColor="@color/orange"
             android:background="@color/darcGray"/>
     </LinearLayout>
