--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,15 @@
         android:layout_height="0dp"
         android:layout_weight="1.5"
         android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="88dp"
+            android:layout_height="match_parent"
+            android:background="@color/darcGray"
+            android:paddingTop="8dp"
+            android:src="@drawable/corbie"/>
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -34,10 +43,10 @@
             android:id="@+id/contactButton"
             android:layout_height="match_parent"
             android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:background="@color/darcGray"
             android:textColor="@color/orange"
-            android:text="contacts"
+            android:text="@string/contacts"
             android:textSize="15sp"
             />
     </LinearLayout>
