--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -28,14 +28,24 @@
             android:gravity="center_vertical"
             android:textSize="25sp"
             android:textColor="@color/orange"/>
-        <Button
-            android:id="@+id/addButton"
+        <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/add"
-            android:textColor="@color/orange"
-            android:background="@color/darcGray"/>
+            android:background="@color/darcGray">
+            <ImageButton
+                android:id="@+id/addButton"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/add"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
+                android:textColor="@color/orange"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:background="@color/darcGray"/>
+        </RelativeLayout>
+
     </LinearLayout>
     <ListView
         android:id="@+id/contactList"
