--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,17 +38,27 @@
                 android:textColor="@color/white"
                 android:textSize="15sp"/>
         </LinearLayout>
+         <RelativeLayout
+             android:layout_height="match_parent"
+             android:layout_width="0dp"
+             android:layout_weight="2"
+             android:background="@color/darcGray">
+             <ImageButton
+                 android:id="@+id/contactButton"
+                 android:layout_height="30dp"
+                 android:layout_width="30dp"
+                 android:background="@color/darcGray"
+                 android:src="@drawable/contacts"
+                 android:scaleType="fitCenter"
+                 android:adjustViewBounds="true"
+                 android:textColor="@color/white"
+                 android:layout_centerHorizontal="true"
+                 android:layout_centerVertical="true"
+                 android:text="@string/contacts"
+                 android:textSize="15sp"
+                 />
+         </RelativeLayout>
 
-        <Button
-            android:id="@+id/contactButton"
-            android:layout_height="match_parent"
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:background="@color/darcGray"
-            android:textColor="@color/orange"
-            android:text="@string/contacts"
-            android:textSize="15sp"
-            />
     </LinearLayout>
        <ListView
            android:id="@+id/chatList"
